2005-06-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/message.py:
	  use a longer name for cb
	  make them private attributes, because they are
	* flumotion/wizard/worker.py:
	  pychecker happiness

2005-06-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	  another actual bug pychecker caught in three different ways.
		flumotion/admin/admin.py:162:
			Invalid arguments to (_makeFactory), got 2, expected 1
		flumotion/admin/admin.py:175:
			self is not first method argument
		flumotion/admin/admin.py:176:
			No global (self) found
	  I don't want to hear any more "useless pychecker" whining.
	  Solutions, not problems.

	* flumotion/wizard/worker.py:

2005-06-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/main.py:
	  make sure we catch all raises from _initialLoadConfig correctly,
	  and print a traceback for those we don't explicitly handle

2005-06-10  Andy Wingo  <wingo@pobox.com>

	* flumotion/wizard/message.py (MessageView.__init__): Back off on
	the padding of the message.

	* flumotion/wizard/worker.py: New file, implements a list of
	workers. Fires 'worker-selected' when the selected worker changes.

	* flumotion/wizard/message.py: New file, implements a message
	area, showing 0 to N messages. It hides itself when there are no
	messages to show. Messages have id's. They can be cleared by id,
	and no two messages of the same id will be visible at a time. The
	UI needs some work.

	* flumotion/wizard/wizard.py (Wizard.info_msg, Wizard.error_msg) 
	(Wizard.clear_msg): New methods to show and clear messages in the
	message area. No more modal dialogs.
	(Wizard.set_step): Updates to get the worker list, message area,
	and next button states right. Fire worker_changed on the step when
	we switch to it.

	* flumotion/wizard/steps.py: All remote calls turned into
	defer_generator_methods for clearer code and default errbacks.