@@ -237,8 +237,9 @@ class Vishnu(log.Loggable):
             from flumotion.common.registry import registry
             defs = registry.getComponent(conf.manager.bouncer.type)
             configDict = conf.manager.bouncer.getConfigDict()
-            import flumotion.worker.job
-            self.setBouncer(flumotion.worker.job.getComponent(configDict, defs))
+            from flumotion.worker import job
+            bouncer = job.getComponent(configDict, defs)
+            self.setBouncer(bouncer)
             self.bouncer.debug('started')
             log.info('manager', "Started manager's bouncer")
 
